--- a/Assignment_3_1st_DNN-VK.ipynb
+++ b/Assignment_3_1st_DNN-VK.ipynb
@@ -455,24 +455,24 @@
       "metadata": {
         "id": "4xWoKhPY9Of5",
         "colab_type": "code",
-        "outputId": "1106bc60-484b-4a08-883a-d5a9f242277d",
+        "outputId": "eeb259c1-6e2c-430d-fcb4-68f90ca43add",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 836
+          "height": 870
         }
       },
       "source": [
         "#Model training\n",
         "\n",
-        "model.fit(X_train, Y_train, batch_size=32, nb_epoch=22, verbose=1)"
+        "model.fit(X_train, Y_train, batch_size=32, nb_epoch=23, verbose=1)"
       ],
-      "execution_count": 27,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/22\n",
-            "  704/60000 [..............................] - ETA: 14s - loss: 0.0015 - acc: 1.0000"
+            "Epoch 1/23\n",
+            "  672/60000 [..............................] - ETA: 16s - loss: 3.9468e-04 - acc: 1.0000"
           ],
           "name": "stdout"
         },
@@ -487,49 +487,51 @@
         {
           "output_type": "stream",
           "text": [
-            "60000/60000 [==============================] - 13s 216us/step - loss: 0.0031 - acc: 0.9993\n",
-            "Epoch 2/22\n",
-            "60000/60000 [==============================] - 13s 217us/step - loss: 0.0040 - acc: 0.9990\n",
-            "Epoch 3/22\n",
-            "60000/60000 [==============================] - 13s 216us/step - loss: 0.0034 - acc: 0.9992\n",
-            "Epoch 4/22\n",
-            "60000/60000 [==============================] - 14s 232us/step - loss: 0.0039 - acc: 0.9990\n",
-            "Epoch 5/22\n",
-            "60000/60000 [==============================] - 13s 215us/step - loss: 0.0033 - acc: 0.9992\n",
-            "Epoch 6/22\n",
-            "60000/60000 [==============================] - 13s 217us/step - loss: 0.0032 - acc: 0.9991\n",
-            "Epoch 7/22\n",
-            "60000/60000 [==============================] - 13s 216us/step - loss: 0.0034 - acc: 0.9991\n",
-            "Epoch 8/22\n",
-            "60000/60000 [==============================] - 13s 218us/step - loss: 0.0031 - acc: 0.9992\n",
-            "Epoch 9/22\n",
-            "60000/60000 [==============================] - 13s 217us/step - loss: 0.0038 - acc: 0.9989\n",
-            "Epoch 10/22\n",
-            "60000/60000 [==============================] - 14s 234us/step - loss: 0.0027 - acc: 0.9994\n",
-            "Epoch 11/22\n",
-            "60000/60000 [==============================] - 13s 222us/step - loss: 0.0034 - acc: 0.9991\n",
-            "Epoch 12/22\n",
-            "60000/60000 [==============================] - 14s 227us/step - loss: 0.0033 - acc: 0.9992\n",
-            "Epoch 13/22\n",
-            "60000/60000 [==============================] - 14s 227us/step - loss: 0.0031 - acc: 0.9993\n",
-            "Epoch 14/22\n",
-            "60000/60000 [==============================] - 13s 224us/step - loss: 0.0031 - acc: 0.9992\n",
-            "Epoch 15/22\n",
-            "60000/60000 [==============================] - 13s 225us/step - loss: 0.0031 - acc: 0.9992\n",
-            "Epoch 16/22\n",
-            "60000/60000 [==============================] - 14s 237us/step - loss: 0.0040 - acc: 0.9989\n",
-            "Epoch 17/22\n",
-            "60000/60000 [==============================] - 13s 223us/step - loss: 0.0027 - acc: 0.9993\n",
-            "Epoch 18/22\n",
-            "60000/60000 [==============================] - 14s 241us/step - loss: 0.0028 - acc: 0.9993\n",
-            "Epoch 19/22\n",
-            "60000/60000 [==============================] - 14s 236us/step - loss: 0.0032 - acc: 0.9992\n",
-            "Epoch 20/22\n",
-            "60000/60000 [==============================] - 14s 229us/step - loss: 0.0027 - acc: 0.9994\n",
-            "Epoch 21/22\n",
-            "60000/60000 [==============================] - 14s 226us/step - loss: 0.0027 - acc: 0.9993\n",
-            "Epoch 22/22\n",
-            "60000/60000 [==============================] - 14s 235us/step - loss: 0.0028 - acc: 0.9993\n"
+            "60000/60000 [==============================] - 13s 223us/step - loss: 0.0017 - acc: 0.9996\n",
+            "Epoch 2/23\n",
+            "60000/60000 [==============================] - 13s 217us/step - loss: 0.0016 - acc: 0.9996\n",
+            "Epoch 3/23\n",
+            "60000/60000 [==============================] - 13s 213us/step - loss: 0.0021 - acc: 0.9994\n",
+            "Epoch 4/23\n",
+            "60000/60000 [==============================] - 13s 213us/step - loss: 0.0015 - acc: 0.9997\n",
+            "Epoch 5/23\n",
+            "60000/60000 [==============================] - 13s 213us/step - loss: 0.0016 - acc: 0.9996\n",
+            "Epoch 6/23\n",
+            "60000/60000 [==============================] - 15s 244us/step - loss: 0.0018 - acc: 0.9995\n",
+            "Epoch 7/23\n",
+            "60000/60000 [==============================] - 13s 225us/step - loss: 0.0019 - acc: 0.9995\n",
+            "Epoch 8/23\n",
+            "60000/60000 [==============================] - 13s 214us/step - loss: 0.0014 - acc: 0.9997\n",
+            "Epoch 9/23\n",
+            "60000/60000 [==============================] - 13s 215us/step - loss: 0.0019 - acc: 0.9995\n",
+            "Epoch 10/23\n",
+            "60000/60000 [==============================] - 13s 213us/step - loss: 0.0017 - acc: 0.9996\n",
+            "Epoch 11/23\n",
+            "60000/60000 [==============================] - 13s 214us/step - loss: 0.0014 - acc: 0.9997\n",
+            "Epoch 12/23\n",
+            "60000/60000 [==============================] - 13s 219us/step - loss: 0.0014 - acc: 0.9996\n",
+            "Epoch 13/23\n",
+            "60000/60000 [==============================] - 14s 228us/step - loss: 0.0020 - acc: 0.9994\n",
+            "Epoch 14/23\n",
+            "60000/60000 [==============================] - 13s 215us/step - loss: 0.0015 - acc: 0.9996\n",
+            "Epoch 15/23\n",
+            "60000/60000 [==============================] - 13s 214us/step - loss: 0.0014 - acc: 0.9996\n",
+            "Epoch 16/23\n",
+            "60000/60000 [==============================] - 13s 214us/step - loss: 0.0019 - acc: 0.9993\n",
+            "Epoch 17/23\n",
+            "60000/60000 [==============================] - 13s 215us/step - loss: 0.0014 - acc: 0.9996\n",
+            "Epoch 18/23\n",
+            "60000/60000 [==============================] - 13s 215us/step - loss: 0.0013 - acc: 0.9996\n",
+            "Epoch 19/23\n",
+            "60000/60000 [==============================] - 14s 232us/step - loss: 0.0017 - acc: 0.9996\n",
+            "Epoch 20/23\n",
+            "60000/60000 [==============================] - 13s 216us/step - loss: 0.0011 - acc: 0.9998\n",
+            "Epoch 21/23\n",
+            "60000/60000 [==============================] - 13s 216us/step - loss: 0.0013 - acc: 0.9997\n",
+            "Epoch 22/23\n",
+            "60000/60000 [==============================] - 13s 216us/step - loss: 0.0016 - acc: 0.9996\n",
+            "Epoch 23/23\n",
+            "60000/60000 [==============================] - 13s 215us/step - loss: 0.0016 - acc: 0.9996\n"
           ],
           "name": "stdout"
         },
@@ -537,13 +539,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f4440c59b38>"
+              "<keras.callbacks.History at 0x7f4440bde860>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 50
         }
       ]
     },
@@ -567,7 +569,7 @@
       "metadata": {
         "id": "mkX8JMv79q9r",
         "colab_type": "code",
-        "outputId": "c14c780b-761e-4f3a-831c-f316304a22ae",
+        "outputId": "23f97f0c-d30a-40ae-a28e-aec1a67cb570",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -576,12 +578,12 @@
       "source": [
         "print(score)"
       ],
-      "execution_count": 31,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0.027996132973971816, 0.993]\n"
+            "[0.03064599621466041, 0.9932]\n"
           ],
           "name": "stdout"
         }
@@ -605,7 +607,7 @@
       "metadata": {
         "id": "Ym7iCFBm9uBs",
         "colab_type": "code",
-        "outputId": "9e091061-2586-44de-a3d5-3fdb0bb2b59b",
+        "outputId": "2e7c5d66-fdcb-4c7d-895d-fc57888eb65b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 493
@@ -615,38 +617,38 @@
         "print(y_pred[:9])\n",
         "print(y_test[:9])"
       ],
-      "execution_count": 33,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[6.17161859e-08 1.08259872e-08 6.37698505e-11 2.90906993e-10\n",
-            "  1.51162916e-09 1.18099752e-10 3.99720124e-09 9.99999881e-01\n",
-            "  2.99952944e-11 4.98085129e-10]\n",
-            " [4.85700085e-08 2.03787098e-09 1.00000000e+00 1.20956301e-09\n",
-            "  1.89028914e-12 7.23851656e-14 5.82678661e-09 8.23191723e-11\n",
-            "  1.38464700e-11 4.94209777e-11]\n",
-            " [5.43793055e-09 9.99999881e-01 7.54680940e-09 5.28531041e-09\n",
-            "  1.53368145e-08 2.11126121e-08 7.13443082e-09 4.40320136e-08\n",
-            "  2.89936235e-08 2.52664023e-09]\n",
-            " [9.99994755e-01 1.79455256e-07 4.64479939e-07 5.45189721e-07\n",
-            "  1.55147475e-07 3.31311578e-09 2.16939770e-06 9.89184400e-07\n",
-            "  6.59265766e-07 6.70390765e-09]\n",
-            " [4.05881373e-09 1.50332971e-06 2.85304141e-10 1.03590799e-06\n",
-            "  9.99997377e-01 7.10764247e-09 9.02330797e-08 5.24306643e-09\n",
-            "  7.44260653e-10 1.32145661e-09]\n",
-            " [2.45046579e-08 1.00000000e+00 1.98453840e-08 9.69092029e-10\n",
-            "  2.69015921e-09 6.78955170e-10 2.37050513e-09 7.56069962e-09\n",
-            "  1.17919150e-08 6.11279916e-11]\n",
-            " [1.78385445e-10 6.05243713e-08 6.07307584e-07 2.98258575e-12\n",
-            "  9.99340713e-01 5.34172306e-09 1.26961828e-08 2.53968309e-12\n",
-            "  6.58532779e-04 6.47468468e-10]\n",
-            " [7.77859548e-12 1.89014027e-09 4.50212063e-08 5.80219791e-13\n",
-            "  3.19596047e-08 2.94068464e-10 3.58313769e-12 2.13303724e-12\n",
-            "  4.14195483e-10 9.99999881e-01]\n",
-            " [1.01582173e-05 3.24365544e-07 1.22426812e-07 1.17777375e-07\n",
-            "  2.44284557e-08 9.92727280e-01 7.24894833e-03 2.59929189e-10\n",
-            "  1.30697572e-05 2.20110774e-09]]\n",
+            "[[1.76551343e-11 2.41369546e-11 8.04715929e-12 2.35990602e-11\n",
+            "  1.97725755e-12 1.30602953e-13 3.30276778e-12 1.00000000e+00\n",
+            "  2.24140571e-13 7.69232941e-12]\n",
+            " [4.55972859e-08 3.28554933e-10 1.00000000e+00 4.61205629e-10\n",
+            "  2.68851347e-12 3.13839365e-15 6.43118614e-10 9.31976857e-11\n",
+            "  7.99920796e-10 8.52408584e-13]\n",
+            " [1.63287195e-09 1.00000000e+00 2.53345434e-09 7.03443748e-10\n",
+            "  1.02141060e-08 5.12091125e-09 1.25321831e-09 3.20993259e-08\n",
+            "  6.75168810e-10 6.54830218e-11]\n",
+            " [9.99999762e-01 1.61808078e-08 1.45322598e-09 1.06907457e-07\n",
+            "  1.20238841e-09 2.22654339e-09 1.26710091e-07 4.52331816e-09\n",
+            "  1.58085118e-08 1.27365202e-10]\n",
+            " [6.37778585e-09 1.42104159e-06 4.05226070e-12 2.45925555e-08\n",
+            "  9.99998569e-01 3.77882697e-10 2.07087614e-09 1.83655979e-10\n",
+            "  2.94681050e-11 7.66258557e-10]\n",
+            " [9.77080727e-09 1.00000000e+00 5.45792345e-09 4.39799336e-10\n",
+            "  2.09505013e-09 5.14846533e-11 5.95945793e-10 2.75115086e-09\n",
+            "  5.46787116e-10 3.46039516e-11]\n",
+            " [1.04771747e-11 2.08671249e-08 2.70622280e-08 2.59244557e-13\n",
+            "  9.99998212e-01 3.65894988e-12 3.30976357e-11 1.26204074e-13\n",
+            "  1.74886247e-06 5.80973047e-09]\n",
+            " [1.07853223e-12 3.90429702e-11 5.96493308e-08 4.74692680e-14\n",
+            "  2.39624036e-08 1.12423001e-10 1.86859585e-14 3.63341681e-13\n",
+            "  4.19394346e-11 9.99999881e-01]\n",
+            " [1.72461530e-08 1.34765912e-07 1.53646091e-08 9.03734954e-09\n",
+            "  4.47561321e-09 9.61745977e-01 3.78843658e-02 9.43820889e-12\n",
+            "  3.69351939e-04 1.04421445e-11]]\n",
             "[7 2 1 0 4 1 4 9 5]\n"
           ],
           "name": "stdout"
